# PingMote

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/audio/: README.md
assets/sprites/: README.md
cmake/: Info.plist.in
docs/: architecture.md  backend.md
include/pingmote/: animation.h  app.h  assistant.h  audio.h  cache.h  microphone.h  network.h  reply.h  resources.h  secure_store.h  sha256.h  speech.h  sprite.h
src/: animation.c  app.c  assistant.c  audio.c  cache.c  main.c  microphone.c  network.c  reply.c  resources.c  secure_store.c  sha256.c  speech.c  sprite.c
supabase/: .env.example  config.toml
supabase/functions/chat/: deno.json  index.ts  prompt.ts  reply.ts  reply_test.ts
supabase/migrations/: 20260713170000_initial_schema.sql  20260713171000_harden_trigger_functions.sql
tests/: animation_tests.c  cache_tests.c  network_smoke.c  reply_tests.c  sha256_tests.c  speech_smoke.c
